2004-02-18  Mike Kestner  <mkestner@ximian.com>

	* gdk/Gdk.metadata : hide EventExpose. make Region opaque.
	* gdk/EventExpose.cs : glue-based manual implementation.
	* gdk/EventExpose.custom : kill
	* gdk/gdk-api.xml : regen
	* gdk/gdk-symbols.xml : manual mapping for EventExpose.
	* glue/event.cs : expose Expose struct fields.
	* sample/Scribble.cs : fix some EventExpose api breakage

2004-02-18  Mike Kestner  <mkestner@ximian.com>

	* gdk/Gdk.metadata : hide EventMotion
	* gdk/EventMotion.cs : glue-based manual implementation.
	* gdk/EventMotion.custom : kill
	* gdk/gdk-api.xml : regen
	* gdk/gdk-symbols.xml : manual mapping for EventMotion.
	* glue/event.cs : expose Motion struct fields.
	* sample/Scribble.cs : fix some EventMotion api breakage

2004-02-18  Mike Kestner  <mkestner@ximian.com>

	* gdk/Gdk.metadata : hide EventScroll
	* gdk/EventScroll.cs : glue-based manual implementation.
	* gdk/EventScroll.custom : kill
	* gdk/gdk-api.xml : regen
	* gdk/gdk-symbols.xml : manual mapping for EventScroll.
	* glue/event.cs : expose Scroll struct fields.

2004-02-18  Mike Kestner  <mkestner@ximian.com>

	* gdk/Gdk.metadata : hide EventButton
	* gdk/EventButton.cs : glue-based manual implementation.
	* gdk/EventButton.custom : kill
	* gdk/gdk-api.xml : regen
	* gdk/gdk-symbols.xml : manual mapping for EventButton.
	* glue/event.cs : expose Button struct fields.
	* sample/CanvasExample.cs : fix EventButton ctor
	* sample/GnomeHelloWorld.cs : fix EventButton ctor

2004-02-17  Radek Doulik  <rodo@ximian.com>

	* glib/Value.cs: use g_value_set_pointer for
	GType.Pointer/IWrapper objects

	* glib/TypeConverter.cs: return GType.Pointer for Opaque objects
	which do not have GType property

2004-02-17  John Luke  <jluke@cfl.rr.com>

	* gdk/Gdk.metadata: set Gdk.Window.Cursor null_ok
	* gdk/gdk-api.xml: regen

2004-02-17   Jorn Baayen  <jorn@nl.linux.org>

	* gtk/SelectionData.custom : fix get_data_pointer glue method name.

2004-02-16  Mike Kestner  <mkestner@ximian.com>
