@@ -69,6 +69,7 @@
   <attr path="//struct[@cname='GdkEventKey']" name="hidden">1</attr>
   <attr path="//struct[@cname='GdkEventMotion']" name="hidden">1</attr>
   <attr path="//struct[@cname='GdkEventScroll']" name="hidden">1</attr>
+  <attr path="//struct[@cname='GdkEventVisibility']" name="hidden">1</attr>
   <attr path="//struct[@cname='GdkPixmapObject']" name="hidden">1</attr>
   <attr path="//struct[@cname='GdkRegion']" name="opaque">1</attr>
   <attr path="//struct[@cname='GdkTimeCoord']/field[@cname='axes']" name="array_len">128</attr>
