@@ -2415,7 +2415,7 @@
       <field cname="action" type="GdkSettingAction" />
       <field cname="name" type="char*" />
     </struct>
-    <struct name="EventVisibility" cname="GdkEventVisibility">
+    <struct name="EventVisibility" cname="GdkEventVisibility" hidden="1">
       <field cname="type" type="GdkEventType" />
       <field cname="window" type="GdkWindow*" />
       <field cname="send_event" type="gint8" />
