@@ -7,5 +7,6 @@
   <symbol type="manual" cname="GdkEventKey" name="Gdk.EventKey"/>
   <symbol type="manual" cname="GdkEventMotion" name="Gdk.EventMotion"/>
   <symbol type="manual" cname="GdkEventScroll" name="Gdk.EventScroll"/>
+  <symbol type="manual" cname="GdkEventVisibility" name="Gdk.EventVisibility"/>
 </api>
 
