@@ -1,5 +1,14 @@
 2004-02-18  Mike Kestner  <mkestner@ximian.com>
 
+	* gdk/Gdk.metadata : hide EventVisibility. 
+	* gdk/EventVisibility.cs : glue-based manual implementation.
+	* gdk/EventVisibility.custom : kill
+	* gdk/gdk-api.xml : regen
+	* gdk/gdk-symbols.xml : manual mapping for EventVisibility.
+	* glue/event.cs : expose Visibility struct fields.
+
+2004-02-18  Mike Kestner  <mkestner@ximian.com>
+
 	* gdk/Gdk.metadata : hide EventExpose. make Region opaque.
 	* gdk/EventExpose.cs : glue-based manual implementation.
 	* gdk/EventExpose.custom : kill
